fixed alignment issue

--- a/css/app.css
+++ b/css/app.css
@@ -10085,7 +10085,12 @@ footer.footer {
     font-size: 3em;
     margin: 0 0.25em; }
 
-@media screen and (max-width: 1086px) {
+@media screen and (max-width: 1087px) {
+  header.landing nav {
+    padding-left: 2em;
+    padding-right: 2em; }
+  #welcome .plug {
+    left: 2em; }
   #work {
     padding-left: 2em;
     padding-right: 2em; }
