--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -1238,7 +1238,21 @@ footer.footer {
   }
 }
 
-@media screen and (max-width: 1086px) {
+@media screen and (max-width: 1087px) {
+
+  header.landing {
+    nav {
+      padding-left: 2em;
+      padding-right: 2em;
+    }
+  }
+
+  #welcome {
+    .plug {
+      left: 2em;
+    }
+  }
+
   #work {
     padding-left: 2em;
     padding-right: 2em;
